--- a/menu.html
+++ b/menu.html
@@ -464,7 +464,7 @@
     							</div>
     						</div>
     					</div>
-    					<!-- <div class="cell">
+    					<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/Arrosticini_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Arrosticini">
@@ -472,7 +472,7 @@
     								<p>Arrosticini artigianali di pecora (12 pezzi).<span class=""><br><small>Allergeni: --</small></span></p>
     							</div>
     						</div>
-    					</div> -->
+    					</div>
     				</div>
     			</div>
     		</section>
