--- a/menu.html
+++ b/menu.html
@@ -81,37 +81,6 @@
     </div>
     <div id="menupage-text">
     	<div class="grid-container">
-            <!-- <section class="grid-x grid-margin-x grid-margin-y" id="aperitivo" data-magellan-target="aperitivo">
-                <div class="small-12 cell callout secondary">
-                    <h2>Aperitivo</h2>
-                    <div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
-                        <div class="cell">
-                            <div class="card">
-                                <div class="card-section">
-                                    <h3>Aperitivo di Fritti<span class="price ">15</span></h3>
-                                    <ul class="bullet">
-                                        <li>4 olive all'ascolana, 4 bocconcini di pollo, 4 falafel, cipolle in tempura.</li>
-                                        <li>Scelta fra: calice di vino, birra artigianale media o spritz.</li>
-                                    </ul>
-                                    <p><small>Allergeni: Glutine, Uova, Latte, Crostacei, Sedano, Senape, Anidride solforosa e solfiti</small></p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="cell">
-                            <div class="card">
-                                <div class="card-section">
-                                    <h3>Aperitivo Slider<span class="price ">15</span></h3>
-                                    <ul class="bullet">
-                                        <li>3 slider da 50 grammi ciascuno selezionati dal cuoco.</li>
-                                        <li>Scelta fra: calice di vino, birra artigianale media o spritz.</li>
-                                    </ul>
-                                    <p><small>Allergeni: Glutine, Uova, Latte, Crostacei, Sedano, Senape, Anidride solforosa e solfiti</small></p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section> -->
     		<section class="grid-x grid-margin-x grid-margin-y" id="perStuzzicare" data-magellan-target="perStuzzicare">
     			<div class="small-12 cell">
     				<h2>Per Stuzzicare</h2>
@@ -218,7 +187,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/CheeseburgerSpecial_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Cheeseburger Special">
     								<h3>Cheeseburger Special<span class="price ">Singolo 12,9 | Doppio 16,9</span></h3>
-    								<p>Burger di manzo, cheddar, cipolle rosse in agrodolce, insalata croccante, salsa burger.<span class=""><br><small>Allergeni: Glutine, Uova, Latte, Senape</small></span></p>
+    								<p>Burger di manzo, cheddar, cipolle rosse in agrodolce, insalata, salsa burger.<span class=""><br><small>Allergeni: Glutine, Uova, Latte, Senape</small></span></p>
     							</div>
     						</div>
     					</div>
@@ -281,7 +250,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/Primavera_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Primavera">
     								<h3>Primavera<span class="price ">Singolo 12,9 | Doppio 16,9</span></h3>
-    								<p>Burger di manzo, composta di feta, pomodorini e timo; insalata riccia.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
+    								<p>Burger di manzo, composta di feta, pomodorini e timo; insalata.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
     						</div>
     					</div> -->
@@ -353,7 +322,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/PulledPork_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Pulled Pork">
     								<h3>Pulled Pork<span class="price ">13,4</span></h3>
-    								<p>Maiale sfilacciato, coleslaw, cetriolini, insalata riccia, salsa piccante.<span class=""><br><small>Allergeni: Glutine, Uova, Latte, Senape, Anidride solforosa e solfiti</small></span></p>
+    								<p>Maiale sfilacciato, coleslaw, cetriolini, insalata, salsa piccante.<span class=""><br><small>Allergeni: Glutine, Uova, Latte, Senape, Anidride solforosa e solfiti</small></span></p>
     							</div>
     						</div>
     					</div>
