--- a/menu.html
+++ b/menu.html
@@ -81,6 +81,37 @@
     </div>
     <div id="menupage-text">
     	<div class="grid-container">
+            <!-- <section class="grid-x grid-margin-x grid-margin-y" id="aperitivo" data-magellan-target="aperitivo">
+                <div class="small-12 cell callout secondary">
+                    <h2>Aperitivo</h2>
+                    <div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <h3>Aperitivo di Fritti<span class="price ">15</span></h3>
+                                    <ul class="bullet">
+                                        <li>4 olive all'ascolana, 4 bocconcini di pollo, 4 falafel, cipolle in tempura.</li>
+                                        <li>Scelta fra: calice di vino, birra artigianale media o spritz.</li>
+                                    </ul>
+                                    <p><small>Allergeni: Glutine, Uova, Latte, Crostacei, Sedano, Senape, Anidride solforosa e solfiti</small></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <h3>Aperitivo Slider<span class="price ">15</span></h3>
+                                    <ul class="bullet">
+                                        <li>3 slider da 50 grammi ciascuno selezionati dal cuoco.</li>
+                                        <li>Scelta fra: calice di vino, birra artigianale media o spritz.</li>
+                                    </ul>
+                                    <p><small>Allergeni: Glutine, Uova, Latte, Crostacei, Sedano, Senape, Anidride solforosa e solfiti</small></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section> -->
     		<section class="grid-x grid-margin-x grid-margin-y" id="perStuzzicare" data-magellan-target="perStuzzicare">
     			<div class="small-12 cell">
     				<h2>Per Stuzzicare</h2>
