--- a/menu.html
+++ b/menu.html
@@ -446,7 +446,7 @@
     							</div>
     						</div>
     					</div>
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/CotolettadiPollo_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Cotoletta di Pollo">
@@ -454,7 +454,7 @@
     								<p>Cotoletta di petto di pollo super croccante e succosissima all&#x27;interno. Servita con patate fritte.<span class=""><br><small>Allergeni: Glutine, Soia</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
