update form accedi

--- a/torte-ricorrenze.html
+++ b/torte-ricorrenze.html
@@ -152,7 +152,7 @@
     </div>
     <div id="signup-login" class="reveal reveal-ecommerce grid-x grid-margin-x grid-margin-y main-container" data-reveal-id='signup-login' data-reveal data-deep-link="true">
         <header class="main-header border-bottom">
-            <h2 class="h2-titolo-carrello">Accedi o Registrati</h2>
+            <h2 class="h2-titolo-carrello">Accedi o Crea nuovo account</h2>
             <button type="button" class="close-button close-button-carrello" data-close aria-label="Close reveal">
                 <span aria-hidden="true">&times;</span>
             </button>
@@ -204,23 +204,10 @@
             </form>
         </div>
         <!-- fine modal reset password -->
-    
-        <!--  <div class="grid-x grid-padding-x grid-margin-y">
-            <div class="small-12 cell">
-                <h5 class="text-center subheader">oppure</h5>
-            </div>
-        </div> -->
-        <!-- <div class="grid-x grid-padding-x grid-padding-y">
-            <div class="small-12 cell">
-                <button type="button" class="button">Accedi con Facebook</button>
-                <button type="button" class="button alert">Accedi con Google</button>
-            </div>
-        </div> -->
-    
         <form autocomplete="on">
             <div class="grid-x grid-padding-x extra-space">
                 <div class="small-12 cell">
-                    <h2 class="h2-carrello">Registrati</h2>
+                    <h2 class="h2-carrello">Crea un nuovo account</h2>
                 </div>
                 <div class="small-6 medium-6 cell">
                     <label for="name"><strong>Nome*</strong>
