--- a/menu.html
+++ b/menu.html
@@ -1074,7 +1074,7 @@
     </div>
     <div id="signup-login" class="reveal reveal-ecommerce grid-x grid-margin-x grid-margin-y main-container" data-reveal-id='signup-login' data-reveal data-deep-link="true">
         <header class="main-header border-bottom">
-            <h2 class="h2-titolo-carrello">Accedi o Registrati</h2>
+            <h2 class="h2-titolo-carrello">Accedi o Crea nuovo account</h2>
             <button type="button" class="close-button close-button-carrello" data-close aria-label="Close reveal">
                 <span aria-hidden="true">&times;</span>
             </button>
@@ -1129,7 +1129,7 @@
         <form autocomplete="on">
             <div class="grid-x grid-padding-x extra-space">
                 <div class="small-12 cell">
-                    <h2 class="h2-carrello">Registrati</h2>
+                    <h2 class="h2-carrello">Crea un nuovo account</h2>
                 </div>
                 <div class="small-6 medium-6 cell">
                     <label for="name"><strong>Nome*</strong>
