--- a/menu.html
+++ b/menu.html
@@ -157,7 +157,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/TriangolidiVerdure_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Triangoli di Verdure">
     								<h3>Triangoli di Verdure<span class="price ">5,5</span></h3>
-    								<p>Carote, peperoni, piselli, mais e cipolle avvolte da una croccante panatura dorata. Serviti con salsa aioli (6 pezzi).<span class=""><br><small>Allergeni: Glutine, Sedano, Senape</small></span></p>
+    								<p>Carote, peperoni, piselli, mais e cipolle avvolte da una croccante panatura dorata (6 pezzi).<span class=""><br><small>Allergeni: Glutine, Sedano, Senape</small></span></p>
     							</div>
     						</div>
     					</div>
