--- a/menu.html
+++ b/menu.html
@@ -819,14 +819,14 @@
     			<div class="small-12 cell">
     				<h2>Vino<small>Bottiglia | Calice</small></h2>
     				<div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Rosso Conero doc - Serrano<span class="price ">15,5 | 4</span></h3>
     								<p class="">Cantina Umani Ronchi. Colore rosso rubino con riflessi violacei. Profumo pulito di visciola matura. Gran polpa e gran rotondità di sapore, uniti ad una buona struttura garantiscono una piacevole bevibilità.<span class=""><br><small>Allergeni: Anidride solforosa e solfiti</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
     					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
