--- a/menu.html
+++ b/menu.html
@@ -339,7 +339,7 @@
     							</div>
     						</div>
     					</div>
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/PolloCroccante_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Pollo Croccante">
@@ -347,7 +347,7 @@
     								<p>Cotoletta di petto di pollo super croccante e succosissima all&#x27;interno, bacon croccante, cipolla in agrodolce, insalata, maionese.<span class=""><br><small>Allergeni: Glutine, Uova, Soia, Latte</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -480,7 +480,7 @@
     			<div class="small-12 cell">
     				<h2>Dolci<small>Fatti in casa</small></h2>
     				<div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/Cheesecake_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Cheesecake">
@@ -488,7 +488,7 @@
     								<p>Cheesecake in stile new york. Squisitamente dolce, morbida e leggermente acidula.<span class=""><br><small>Allergeni: Glutine, Latte, Uova, Frutta a Guscio</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
