--- a/menu.html
+++ b/menu.html
@@ -245,7 +245,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/CacioePepe_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Cacio e Pepe">
     								<h3>Cacio e Pepe<span class="price ">Singolo 13,4 | Doppio 17,9</span></h3>
-    								<p>Burger di manzo, guanciale, crema di pecorino e pepe.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
+    								<p>Burger di manzo, guanciale, crema pecorino e pepe.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
     						</div>
     					</div>
@@ -339,7 +339,7 @@
     							</div>
     						</div>
     					</div>
-    					<!-- <div class="cell">
+    					<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/PolloCroccante_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Pollo Croccante">
@@ -347,7 +347,7 @@
     								<p>Cotoletta di petto di pollo super croccante e succosissima all&#x27;interno, bacon croccante, cipolla in agrodolce, insalata, maionese.<span class=""><br><small>Allergeni: Glutine, Uova, Soia, Latte</small></span></p>
     							</div>
     						</div>
-    					</div> -->
+    					</div>
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
