--- a/menu.html
+++ b/menu.html
@@ -344,7 +344,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/PolloCroccante_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Pollo Croccante">
     								<h3>Pollo Croccante<span class="price ">13,4</span></h3>
-    								<p>Cotoletta di petto di pollo super croccante e succosissima all&#x27;interno, bacon croccante, cipolla in agrodolce, insalata, maionese.<span class=""><br><small>Allergeni: Glutine, Uova, Soia, Latte</small></span></p>
+    								<p>Cotoletta di petto di pollo super croccante e succosissima all&#x27;interno, bacon croccante, cipolla in agrodolce, insalata, maionese, pane ciabatta.<span class=""><br><small>Allergeni: Glutine, Uova, Soia, Latte</small></span></p>
     							</div>
     						</div>
     					</div>
@@ -353,7 +353,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/PulledPork_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Pulled Pork">
     								<h3>Pulled Pork<span class="price ">13,4</span></h3>
-    								<p>Maiale sfilacciato, coleslaw, cetriolini, insalata, salsa piccante.<span class=""><br><small>Allergeni: Glutine, Uova, Latte, Senape, Anidride solforosa e solfiti</small></span></p>
+    								<p>Maiale sfilacciato, coleslaw, cetriolini, insalata, salsa piccante, pane ciabatta.<span class=""><br><small>Allergeni: Glutine, Uova, Latte, Senape, Anidride solforosa e solfiti</small></span></p>
     							</div>
     						</div>
     					</div>
