--- a/menu.html
+++ b/menu.html
@@ -209,7 +209,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/Beerstrot_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Beerstrot">
     								<h3>Beerstrot<span class="price ">Singolo 13,4 | Doppio 17,9</span></h3>
-    								<p>Burger di manzo, cheddar, bacon croccante, cipolla caramellata, insalata, pomodorini confit.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
+    								<p>Burger di manzo, cheddar, bacon croccante, cipolla caramellata, insalata, pomodori confit.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
     						</div>
     					</div>
@@ -299,7 +299,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/Norma_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Norma">
     								<h3>Norma<span class="price ">Singolo 13,4 | Doppio 17,9</span></h3>
-    								<p>Burger di manzo, crema di melanzane e basilico, pomodorini confit, ricotta salata.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
+    								<p>Burger di manzo, crema di melanzane e basilico, pomodori confit, ricotta salata.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
     						</div>
     					</div> -->
@@ -308,7 +308,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/Deciso_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Deciso">
     								<h3>Deciso<span class="price ">Singolo 13,4 | Doppio 17,9</span></h3>
-    								<p>Burger di manzo (180 grammi), gorgonzola, guanciale, pomodorini confit<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
+    								<p>Burger di manzo (180 grammi), gorgonzola, guanciale, pomodori confit<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
     						</div>
     					</div> -->
