--- a/riserva-un-tavolo.html
+++ b/riserva-un-tavolo.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orestbida/cookieconsent@v2.9.1/dist/cookieconsent.css">
     <!-- Facebook Pixel Code -->
-    <script type="text/plain" data-cookiecategory="targeting" >
+    <script type="text/plain" data-cookiecategory="targeting">
         !function(f,b,e,v,n,t,s){if(f.fbq)return;n=f.fbq=function(){n.callMethod?
         n.callMethod.apply(n,arguments):n.queue.push(arguments)};if(!f._fbq)f._fbq=n;
         n.push=n;n.loaded=!0;n.version='2.0';n.queue=[];t=b.createElement(e);t.async=!0;
@@ -133,7 +133,10 @@
                 <div class="grid-x grid-margin-x grid-margin-y">
                     <div class="small-6 medium-4 cell">
                         <label><strong>Quale giorno*</strong>
-                            <input id="from" type="text" class="required error" placeholder="Seleziona Giorno" readonly/>
+                            <div class="input-group">
+                                <span class="input-group-label"><i class="las la-calendar" style="font-size:32px"></i></span>
+                                <input id="from" type="text" class="required error input-group-field" placeholder="Seleziona Giorno" readonly/>
+                            </div>
                         </label>
                     </div>
                     <div class="small-6 medium-4 cell">
