--- a/riserva-un-tavolo.html
+++ b/riserva-un-tavolo.html
@@ -134,8 +134,8 @@
                     <div class="small-6 medium-4 cell">
                         <label><strong>Quale giorno*</strong>
                             <div class="input-group">
-                                <span class="input-group-label"><i class="las la-calendar" style="font-size:32px"></i></span>
-                                <input id="from" type="text" class="required error input-group-field" placeholder="Seleziona Giorno" readonly/>
+                                <span class="input-group-label"><i class="las la-calendar hide-for-small" style="font-size:32px"></i></span>
+                                <input id="from" type="text" class="required error input-group-field" placeholder="Seleziona Data" readonly/>
                             </div>
                         </label>
                     </div>
