--- a/menu.html
+++ b/menu.html
@@ -966,7 +966,7 @@
     						<div class="card">
     							<div class="card-section">
     								<h3>Grappa Barricata<span class="price ">4</span></h3>
-    								<p class="">Pilzer grappa invecchiata 3 anni.<span class="hide"><br><small>Allergeni: </small></span></p>
+    								<p class="">Grappa invecchiata<span class="hide"><br><small>Allergeni: </small></span></p>
     							</div>
     						</div>
     					</div>
