--- a/menu.html
+++ b/menu.html
@@ -885,7 +885,7 @@
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
-    								<h3>Gewurztraminer doc<span class="price ">22</span></h3>
+    								<h3>Gewurztraminer doc<span class="price ">22 | 5</span></h3>
     								<p class="">Cantina H.Lun. Un inconfondibile bouquet speziato dal sentore di rose e frutta secca, una corposità generosa e un gusto pieno e intenso caratterizzano questo tipico vino bianco dell&#x27;Alto Adige.<span class=""><br><small>Allergeni: Anidride solforosa e solfiti</small></span></p>
     							</div>
     						</div>
