--- a/menu.html
+++ b/menu.html
@@ -507,6 +507,15 @@
     							</div>
     						</div>
     					</div>
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <img src="assets/img/prod/Anicetti_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Biscotti all'anice">
+                                    <h3>Anicetti<span class="price ">4,5</span></h3>
+                                    <p>Biscotti secchi all'anice (6 pezzi).<span class=""><br><small>Allergeni: Glutine, Anidride solforosa e solfiti</small></span></p>
+                                </div>
+                            </div>
+                        </div>
     				</div>
     			</div>
     		</section>
