--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     		<div class="grid-x grid-margin-x grid-margin-y">
     			<div class="small-12 cell">
     				<h1 class="first-paragraph">Orari</h1>
-                    <p>Aperti a Pasqua e Pasquetta dalle 19:00 alle 22:00</p>
+                    <!-- <p>Aperti a Pasqua e Pasquetta dalle 19:00 alle 22:00</p> -->
     			</div>
     		</div>
     		<div class="grid-x grid-margin-x grid-margin-y">
