--- a/menu.html
+++ b/menu.html
@@ -437,7 +437,7 @@
     							</div>
     						</div>
     					</div>
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/Fish&amp;Chips_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Fish &amp; Chips">
@@ -445,7 +445,7 @@
     								<p>Filetti di merluzzo panati e patate fritte. Serviti con salsa aioli.<span class=""><br><small>Allergeni: Glutine, Uova, Pesce</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -807,22 +807,22 @@
     							</div>
     						</div>
     					</div>
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Calix Niger 33cl<span class="price ">6</span></h3>
     								<p class="">Birrificio dei Castelli. Stout 6,7%. Color ebano scuro, schiuma compatta dai toni nocciola. Al naso elegante sentore di caffè e note di quercia.<span class=""><br><small>Allergeni: Glutine</small></span></p>
     							</div>
     						</div>
-    					</div>
-    					<div class="cell">
+    					</div> -->
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Black Stout 50cl<span class="price ">6,5</span></h3>
     								<p class="">Birrificio Brewmaster. Stout irlandese 4,2%. Stout dal gusto deciso, cremoso e delicato.<span class=""><br><small>Allergeni: Glutine</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
     				</div>
     			</div>
     		</section>
