--- a/menu.html
+++ b/menu.html
@@ -371,7 +371,7 @@
     			<div class="small-12 cell">
     				<h2>Hamburger di Pesce<small>Serviti con patate fritte</small></h2>
     				<div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/Salmone_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Salmone">
@@ -379,7 +379,7 @@
     								<p>Burger di salmone, stracciatella, chips di topinambur.<span class=""><br><small>Allergeni: Glutine, Uova, Pesce, Latte</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -650,14 +650,14 @@
     							</div>
     						</div>
     					</div>
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Italicum<span class="price ">4 | 6 | 12</span></h3>
     								<p class="">Bionda fruttata senza Glutine 5,0%. Birrificio dei Castelli.<span class=""><br><small>Allergeni: --</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
