--- a/menu.html
+++ b/menu.html
@@ -999,14 +999,14 @@
     			<div class="small-12 cell">
     				<h2>Rhum</h2>
     				<div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Don Papa oltre 7 anni<span class="price ">7</span></h3>
     								<p class="">Filippine 40%. Profumo di caramello e mou. Al palato ripropone una notevole dolcezza ben bilanciata da un mix di arancia candita e persistente nota citrica.<span class="hide"><br><small>Allergeni: </small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
