--- a/menu.html
+++ b/menu.html
@@ -642,6 +642,14 @@
     							</div>
     						</div>
     					</div>
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <h3>Pils<span class="price ">4 | 6 | 12</span></h3>
+                                    <p class="">Bionda tedesca con forte nota amara 4,9%. Birrificio Ganter.<span class=""><br><small>Allergeni: Glutine</small></span></p>
+                                </div>
+                            </div>
+                        </div>
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
