--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
     			<div class="small-12 cell">
     				<h1 class="first-paragraph">Orari</h1>
                     <!-- <p>Aperti a Pasqua e Pasquetta dalle 19:00 alle 22:00</p> -->
+                    <p>Domenica 18 Maggio non accettiamo prenotazioni: ci sarà la festa per i 10 anni di Ca' Vecchia Beerstrot con concerto live dei The Cadillacs.<br>
+                    Festa con menù semplice e nessun servizio al tavolo dalle 18:00 alle 23:00</p>
+                    <p>In caso di maltempo la festa sarà rimandata a giugno e faremo servizio normale all'interno del locale.</p>
     			</div>
     		</div>
     		<div class="grid-x grid-margin-x grid-margin-y">
