--- a/menu-festa.html
+++ b/menu-festa.html
@@ -51,8 +51,8 @@
     		<li class="toggle"><a href="javascript:void(0)"><i class="las la-bars la-2x"></i></a></li>
     	</ul>
     </nav> -->
-    <header><img src="assets/img/cover/cover-menu.jpg" alt="Ca' Vecchia Beerstrot Menù Festa"/></header>
-    <div class="grid-container">
+    <!-- <header><img src="assets/img/cover/cover-menu.jpg" alt="Ca' Vecchia Beerstrot Menù Festa"/></header>
+    <div class="grid-container"> -->
     	<div class="grid-x grid-margin-x">
     		<div class="small-12 cell">
     			<h1 class="first-paragraph text-center">Menù</h1>
@@ -119,7 +119,7 @@
     		</section>
             <section class="grid-x grid-margin-x grid-margin-y">
                 <div class="small-12 cell">
-                    <h2>Birra 5€ | Vino 3€</h2>
+                    <h2>Birra Media 5€ | Vino Bicchiere 3€</h2>
                     <div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
                         <div class="cell">
                             <div class="card">
@@ -145,14 +145,14 @@
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
-                                    <p>Verdicchio Matelica doc 125cl<span><br><small>Allergeni: Anidride solforosa e solfiti</small></p>
+                                    <p>Verdicchio Matelica doc 150cl<span><br><small>Allergeni: Anidride solforosa e solfiti</small></p>
                                 </div>
                             </div>
                         </div>
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
-                                    <p>Rosso Piceno doc 125cl<span><br><small>Allergeni: Anidride solforosa e solfiti</small></p>
+                                    <p>Rosso Piceno doc 150cl<span><br><small>Allergeni: Anidride solforosa e solfiti</small></p>
                                 </div>
                             </div>
                         </div>
