--- a/menu.html
+++ b/menu.html
@@ -1055,7 +1055,7 @@
     						<div class="card">
     							<div class="card-section">
     								<h3>Spritz<span class="price ">6</span></h3>
-    								<p class="">Aperol o Campari.<span class="hide"><br><small>Allergeni: </small></span></p>
+    								<p class="">Aperol o Campari.<span class=""><br><small>Allergeni: Anidride solforosa e solfiti</small></span></p>
     							</div>
     						</div>
     					</div>
