--- a/menu-festa.html
+++ b/menu-festa.html
@@ -93,13 +93,6 @@
     			<div class="small-12 cell">
     				<h2>Hamburger 8€</h2>
     				<div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
-    					<div class="cell">
-                            <div class="card">
-                                <div class="card-section">
-                                    <p>Burger di manzo, cheddar<span><br><small>Allergeni: Glutine, Uova, Latte</small></p>
-                                </div>
-                            </div>
-                        </div>
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
@@ -114,12 +107,19 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <p>Burger di fiocchi d'avena, cheddar, insalata e maionese vegana<span><br><small>Allergeni: Glutine, Uova, Latte</small></p>
+                                </div>
+                            </div>
+                        </div>
     				</div>
     			</div>
     		</section>
             <section class="grid-x grid-margin-x grid-margin-y">
                 <div class="small-12 cell">
-                    <h2>Birra Media 5€ | Vino Bicchiere 3€</h2>
+                    <h2>Birra Media 5€</h2>
                     <div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
                         <div class="cell">
                             <div class="card">
@@ -142,17 +142,32 @@
                                 </div>
                             </div>
                         </div>
+
+                    </div>
+                </div>
+            </section>
+            <section class="grid-x grid-margin-x grid-margin-y">
+                <div class="small-12 cell">
+                    <h2>Vino Bicchiere | Spritz Aperol</h2>
+                    <div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
-                                    <p>Verdicchio Matelica doc 150cl<span><br><small>Allergeni: Anidride solforosa e solfiti</small></p>
+                                    <p>Verdicchio Matelica doc 150cl<span class="price ">3€<br><small>Allergeni: Anidride solforosa e solfiti</small></p>
                                 </div>
                             </div>
                         </div>
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
-                                    <p>Rosso Piceno doc 150cl<span><br><small>Allergeni: Anidride solforosa e solfiti</small></p>
+                                    <p>Rosso Piceno doc 150cl<span class="price ">3€<br><small>Allergeni: Anidride solforosa e solfiti</small></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <p>Spritz Aperol<span class="price ">5€<br><small>Allergeni: Anidride solforosa e solfiti</small></p>
                                 </div>
                             </div>
                         </div>
@@ -161,47 +176,47 @@
             </section>
             <section class="grid-x grid-margin-x grid-margin-y">
                 <div class="small-12 cell">
-                    <h2>Bevande 3€</h2>
+                    <h2>Bevande</h2>
                     <div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
-                                    <p>Cocacola 33cl</p>
+                                    <p>Cocacola 33cl<span class="price ">3€</span></p>
                                 </div>
                             </div>
                         </div>
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
-                                    <p>Cocacola Zero 33cl</p>
+                                    <p>Cocacola Zero 33cl<span class="price ">3€</span></p>
                                 </div>
                             </div>
                         </div>
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
-                                    <p>Fanta 33cl</p>
+                                    <p>Fanta 33cl<span class="price ">3€</span></p>
                                 </div>
                             </div>
                         </div>
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
-                                    <p>Estathe Limone 40cl</p>
+                                    <p>Estathe Limone 40cl<span class="price ">3€</span></p>
                                 </div>
                             </div>
                         </div>
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
-                                    <p>Estathe Limone 40cl</p>
+                                    <p>Estathe Pesca 40cl<span class="price ">3€</span></p>
                                 </div>
                             </div>
                         </div>
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
-                                    <p>Acqua liscia o frizzante 50cl <span class="price ">1,5€</span></p>
+                                    <p>Acqua liscia o frizzante 50cl<span class="price ">1,5€</span></p>
                                 </div>
                             </div>
                         </div>
