--- a/menu-festa.html
+++ b/menu-festa.html
@@ -51,8 +51,8 @@
     		<li class="toggle"><a href="javascript:void(0)"><i class="las la-bars la-2x"></i></a></li>
     	</ul>
     </nav> -->
-    <!-- <header><img src="assets/img/cover/cover-menu.jpg" alt="Ca' Vecchia Beerstrot Menù Festa"/></header>
-    <div class="grid-container"> -->
+    <header><img src="assets/img/cover/festa-10-anni.jpg" alt="Ca' Vecchia Beerstrot Menù Festa"/></header>
+    <div class="grid-container">
     	<div class="grid-x grid-margin-x">
     		<div class="small-12 cell">
     			<h1 class="first-paragraph text-center">Menù</h1>
