--- a/menu.html
+++ b/menu.html
@@ -1,4 +1,5 @@
 <!doctype html>
+<!-- <meta http-equiv="refresh" content="0; URL='https://www.beerstrot.it/menu-festa.html'" /> -->
 <html class="no-js" lang="it">
 <head>
     <!-- Google tag (gtag.js) -->
