--- a/menu-festa.html
+++ b/menu-festa.html
@@ -110,7 +110,7 @@
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
-                                    <p>Burger di fiocchi d'avena, cheddar, insalata, maionese vegana<span><br><small>Allergeni: Glutine, Uova, Latte</small></p>
+                                    <p>Burger vegetariano, insalata, maionese vegana<span><br><small>Allergeni: Glutine, Uova, Latte</small></p>
                                 </div>
                             </div>
                         </div>
