--- a/menu-festa.html
+++ b/menu-festa.html
@@ -181,14 +181,14 @@
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
-                                    <p>Cocacola 33cl<span class="price ">3€</span></p>
+                                    <p>Coca-Cola 33cl<span class="price ">3€</span></p>
                                 </div>
                             </div>
                         </div>
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
-                                    <p>Cocacola Zero 33cl<span class="price ">3€</span></p>
+                                    <p>Coca-Cola Zero 33cl<span class="price ">3€</span></p>
                                 </div>
                             </div>
                         </div>
