--- a/menu.html
+++ b/menu.html
@@ -536,7 +536,7 @@
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
-    								<h3>Coca Cola<span class="price ">3</span></h3>
+    								<h3>Coca-Cola<span class="price ">3</span></h3>
     								<p class="">Lattina 33cl.<span class="hide"><br><small>Allergeni: </small></span></p>
     							</div>
     						</div>
@@ -544,7 +544,7 @@
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
-    								<h3>Coca Cola Zero<span class="price ">3</span></h3>
+    								<h3>Coca-Cola Zero<span class="price ">3</span></h3>
     								<p class="">Lattina 33cl.<span class="hide"><br><small>Allergeni: nessuno</small></span></p>
     							</div>
     						</div>
