--- a/menu.html
+++ b/menu.html
@@ -816,14 +816,14 @@
     							</div>
     						</div>
     					</div>
-    					<!-- <div class="cell">
+    					<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Calix Niger 33cl<span class="price ">6</span></h3>
     								<p class="">Birrificio dei Castelli. Stout 6,7%. Color ebano scuro, schiuma compatta dai toni nocciola. Al naso elegante sentore di caffè e note di quercia.<span class=""><br><small>Allergeni: Glutine</small></span></p>
     							</div>
     						</div>
-    					</div> -->
+    					</div>
     					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
