--- a/menu.html
+++ b/menu.html
@@ -490,13 +490,13 @@
     						</div>
     					</div>
     					<div class="cell">
-    						<!-- <div class="card">
+    				        <div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/Birramisu_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Birramisù">
     								<h3>Birramisù<span class="price ">6</span></h3>
     								<p>Tiramisù con savoiardi inzuppati nella birra stout. Avvolgente e cremoso.<span class=""><br><small>Allergeni: Glutine, Latte, Uova</small></span></p>
     							</div>
-    						</div> -->
+    						</div>
     					</div>
     					<div class="cell">
     						<div class="card">
