--- a/menu.html
+++ b/menu.html
@@ -312,7 +312,7 @@
     							</div>
     						</div>
     					</div> -->
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/FaveePecorino_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Fave e Pecorino">
@@ -320,7 +320,7 @@
     								<p>Burger di manzo, pecorino vallesina, guanciale, fave in porchetta.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
     					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
