--- a/riserva-un-tavolo.html
+++ b/riserva-un-tavolo.html
@@ -160,12 +160,11 @@
                                 <div class="cell bShift"><button type="button" class="button" disabled>21.30-23.00</button></div>
                             </div>
                         </label>
-                        
                     </div>
-                     <div class="small-12 cell">
+                    <div class="small-12 cell">
                         <h6>Turno: orario d'arrivo - orario in cui bisogna lasciare il tavolo.</h6>
                         <h6>Dopo 20 minuti di ritardo, in caso di necessità, assegneremo il tavolo ad altre persone.</h6>
-                     </div>
+                    </div>
                     <div class="small-12 cell"><hr></div>
                 </div>
                 <div class="grid-x grid-margin-x grid-margin-y">
@@ -363,13 +362,13 @@
     			<div class="cell">
     				<h1 class="subheader">Orari</h1>
     				<ul class="orari-footer-schedule no-bullet">
-    					<li><span>Lunedì:</span><time>Chiuso</time></li>
-    					<li><span>Martedì:</span><time>Chiuso</time></li>
-    					<li><span>Mercoledì:</span><time>19 - 22</time></li>
-    					<li><span>Giovedì:</span><time>19 - 22</time></li>
-    					<li><span>Venerdì:</span><time>19 - 22</time></li>
+    					<li><span>Lunedì:</span><time>19 - 23</time></li>
+    					<li><span>Martedì:</span><time>19 - 23</time></li>
+    					<li><span>Mercoledì:</span><time>19 - 23</time></li>
+    					<li><span>Giovedì:</span><time>19 - 23</time></li>
+    					<li><span>Venerdì:</span><time>19 - 23</time></li>
     					<li><span>Sabato:</span><time>19 - 23</time></li>
-    					<li><span>Domenica:</span><time>19 - 22</time></li>
+    					<li><span>Domenica:</span><time>19 - 23</time></li>
     				</ul>
     			</div>
     			<div class="cell">
