--- a/informazioni-legali.html
+++ b/informazioni-legali.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orestbida/cookieconsent@v2.9.1/dist/cookieconsent.css">
     <!-- Facebook Pixel Code -->
-    <script type="text/plain" data-cookiecategory="targeting" >
+    <script type="text/plain" data-cookiecategory="targeting">
         !function(f,b,e,v,n,t,s){if(f.fbq)return;n=f.fbq=function(){n.callMethod?
         n.callMethod.apply(n,arguments):n.queue.push(arguments)};if(!f._fbq)f._fbq=n;
         n.push=n;n.loaded=!0;n.version='2.0';n.queue=[];t=b.createElement(e);t.async=!0;
@@ -434,13 +434,13 @@
     			<div class="cell">
     				<h1 class="subheader">Orari</h1>
     				<ul class="orari-footer-schedule no-bullet">
-    					<li><span>Lunedì:</span><time>Chiuso</time></li>
-    					<li><span>Martedì:</span><time>Chiuso</time></li>
-    					<li><span>Mercoledì:</span><time>19 - 22</time></li>
-    					<li><span>Giovedì:</span><time>19 - 22</time></li>
-    					<li><span>Venerdì:</span><time>19 - 22</time></li>
+    					<li><span>Lunedì:</span><time>19 - 23</time></li>
+    					<li><span>Martedì:</span><time>19 - 23</time></li>
+    					<li><span>Mercoledì:</span><time>19 - 23</time></li>
+    					<li><span>Giovedì:</span><time>19 - 23</time></li>
+    					<li><span>Venerdì:</span><time>19 - 23</time></li>
     					<li><span>Sabato:</span><time>19 - 23</time></li>
-    					<li><span>Domenica:</span><time>19 - 22</time></li>
+    					<li><span>Domenica:</span><time>19 - 23</time></li>
     				</ul>
     			</div>
     			<div class="cell">
