--- a/menu.html
+++ b/menu.html
@@ -532,6 +532,14 @@
     							</div>
     						</div>
     					</div>
+                        <!-- <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <h3>Acqua<span class="price ">2</span></h3>
+                                    <p class="">Bottiglia 75cl.<span class="hide"><br><small>Allergeni: </small></span></p>
+                                </div>
+                            </div>
+                        </div> -->
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -1010,11 +1018,11 @@
         				<div class="cell">
     						<div class="card">
     							<div class="card-section">
-    								<h3>Don Papa oltre 7 anni<span class="price ">7</span></h3>
+    								<h3>Don Papa Baroko<span class="price ">7</span></h3>
     								<p class="">Filippine 40%. Profumo di caramello e mou. Al palato ripropone una notevole dolcezza ben bilanciata da un mix di arancia candita e persistente nota citrica.<span class="hide"><br><small>Allergeni: </small></span></p>
     							</div>
     						</div>
-    					</d
+    					</div>
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
