--- a/menu.html
+++ b/menu.html
@@ -170,7 +170,7 @@
     							</div>
     						</div>
     					</div>
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/PeperonciniPiccanti_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Peperoncini Piccanti">
@@ -178,7 +178,7 @@
     								<p>Peperoncini piccanti ripieni di robiola e avvolti in pancetta. Serviti con pane e coleslaw.<span class=""><br><small>Allergeni: Latte, Anidride solforosa e solfiti</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -285,7 +285,7 @@
     							</div>
     						</div>
     					</div> -->
-    					<!-- <div class="cell">
+    					<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/Estivo_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Estivo">
@@ -293,7 +293,7 @@
     								<p>Burger di manzo, mozzarella fiordilatte, pomodoro fresco, maionese al basilico.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
     						</div>
-    					</div> -->
+    					</div>
     					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -312,7 +312,7 @@
     							</div>
     						</div>
     					</div> -->
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/FaveePecorino_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Fave e Pecorino">
@@ -320,7 +320,7 @@
     								<p>Burger di manzo, pecorino vallesina, guanciale, fave in porchetta.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
     					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -516,6 +516,15 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <img src="assets/img/prod/Anicetti_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Biscotti all'anice">
+                                    <h3>Vino da dolce<span class="price ">3,5</span></h3>
+                                    <p>6,5%. Fermentato di mosto.<span class=""><br><small>Allergeni: Anidride solforosa e solfiti</small></span></p>
+                                </div>
+                            </div>
+                        </div>
     				</div>
     			</div>
     		</section>
@@ -524,22 +533,22 @@
     			<div class="small-12 cell">
     				<h2>Bevande</h2>
     				<div class="grid-x small-up-2 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Acqua<span class="price ">1 | 1,5</span></h3>
     								<p class="">Mezzo Litro / Litro.<span class="hide"><br><small>Allergeni: </small></span></p>
     							</div>
     						</div>
-    					</div>
-                        <!-- <div class="cell">
+    					</div> -->
+                        <div class="cell">
                             <div class="card">
                                 <div class="card-section">
                                     <h3>Acqua<span class="price ">2</span></h3>
                                     <p class="">Bottiglia 75cl.<span class="hide"><br><small>Allergeni: </small></span></p>
                                 </div>
                             </div>
-                        </div> -->
+                        </div>
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -775,14 +784,14 @@
     							</div>
     						</div>
     					</div>
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Red Ale 50cl<span class="price ">6,5</span></h3>
     								<p class="">Birrificio Brewmaster. Rossa irlandese 4,2%. Tratti molto decisi di malto e luppolo con un finale caramellato.<span class=""><br><small>Allergeni: Glutine</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
