--- a/menu.html
+++ b/menu.html
@@ -520,7 +520,7 @@
                             <div class="card">
                                 <div class="card-section">
                                     <img src="assets/img/prod/Anicetti_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Biscotti all'anice">
-                                    <h3>Xyris - Vino da dolce<span class="price ">3,5</span></h3>
+                                    <h3>Xyris - Vino da dolce 100cl.<span class="price ">3,5</span></h3>
                                     <p>Cantina Marotti Campi. Fermentato di mosto a bassa gradazione 6,5%. Ottimo con dolci secchi e come cordiale di fine cena leggero.<span class=""><br><small>Allergeni: Anidride solforosa e solfiti</small></span></p>
                                 </div>
                             </div>
