--- a/menu.html
+++ b/menu.html
@@ -202,7 +202,7 @@
     		</section>
     		<section class="grid-x grid-margin-x grid-margin-y" id="hamburger" data-magellan-target="hamburger">
     			<div class="small-12 cell">
-    				<h2>Hamburger<small>Serviti a cottura media e con patate fritte</small></h2>
+    				<h2>Hamburger<small style="line-height: 40px;">Serviti a cottura media e con patate fritte.</small></h2>
     				<div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
     					<div class="cell">
     						<div class="card">
@@ -480,6 +480,15 @@
     							</div>
     						</div>
     					</div>
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <img src="assets/img/prod/PannaCotta_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Panna Cotta">
+                                    <h3>Panna Cotta<span class="price ">5,5</span></h3>
+                                    <p>Morbida e vellutata. Ricoperta a scelta con cioccolato o frutti di bosco.<span class=""><br><small>Allergeni: Latte</small></span></p>
+                                </div>
+                            </div>
+                        </div>
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -490,6 +499,15 @@
     						</div>
     					</div>
     					<div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <img src="assets/img/prod/Crumble_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Crumble">
+                                    <h3>Crumble<span class="price ">6</span></h3>
+                                    <p>Crema chantilly su croccante crumble di farina di mais, cannella e scaglie di cioccolato fondente.<span class=""><br><small>Allergeni: Latte, Uova</small></span></p>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- <div class="cell">
     				        <div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/Birramisu_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Birramisù">
@@ -497,8 +515,8 @@
     								<p>Tiramisù con savoiardi inzuppati nella birra stout. Avvolgente e cremoso.<span class=""><br><small>Allergeni: Glutine, Latte, Uova</small></span></p>
     							</div>
     						</div>
-    					</div>
-    					<div class="cell">
+    					</div> -->
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/Whoop_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Whoop">
@@ -506,7 +524,7 @@
     								<p>Tre biscotti al cioccolato ripieni di delicata crema al burro di arachidi.<span class=""><br><small>Allergeni: Latte, Uova, Arachidi</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
